...
                Card(
                    shape = RoundedCornerShape(12.dp),
                    elevation = 8.dp,
                    modifier = Modifier.fillMaxWidth().fillMaxHeight(0.75f)
                ) {
                    LazyColumn(
                        modifier = Modifier.fillMaxSize().padding(8.dp).testTag("form"),
                        verticalArrangement = Arrangement.spacedBy(12.dp),
                        horizontalAlignment = Alignment.CenterHorizontally
                    ) {
                        item {
                            MakeGenericTextfield(
                                uiState.eventName,
...
                                        focusedBorderColor = PrimaryGreen,
                                        unfocusedBorderColor = SecondaryGreen,
                                        backgroundColor = SecondaryGreen
                                    ),
                                    modifier = Modifier
                                        .fillMaxWidth()
                                        .testTag("create_eventType_input")
                                )

                                Spacer(modifier = Modifier.height(4.dp))

                                ExposedDropdownMenu(
                                    expanded = expanded,
                                    onDismissRequest = { expanded = false }
                                ) {
                                    listOf("Sports", "Theater", "Concert", "Film").forEach { option ->
                                        DropdownMenuItem(
                                            text = { Text(option, color = TextGreen) },
                                            onClick = {
                                                viewModel.onEventTypeChanged(option);
                                                expanded = false
                                            },
...
                        modifier = Modifier
                            .fillMaxWidth(0.50f)
                            .height(65.dp),
                        contentPadding = PaddingValues(0.dp)
                    ) {
                        Text(
                            text = if (isModifyMode) "Update Event" else "Add Event",
                            color = Color.Black,
                            fontSize = 20.sp,
                            fontWeight = FontWeight.Bold
                        )
                    }
                }
...
