...
                                .fillMaxWidth(0.90f)
                        )
                    } else {
                        LazyColumn(
                            modifier = Modifier
                                .fillMaxSize()
                                .testTag("manage_events_list"),
                            verticalArrangement = Arrangement.spacedBy(12.dp)
                        ) {
                            items(uiState.events!!) { event ->
                                EditableEventCard(
                                    subject = event,
                                    clickCardCallback = {
...
                        Button(
                            onClick = {
                                viewModel.deleteEvent(eventToDelete!!)
                                eventToDelete = null
                            }
                        ) {
                            Text("Delete")
                        }
                    },
                    dismissButton = {
                        Button(onClick = { eventToDelete = null }) {
                            Text("Cancel")
                        }
                    }
                )
            }

        }
...
